Some cosmetic changes