@@ -10,11 +10,6 @@ repositories {
     mavenCentral()
 }
 
-run {
-    jvmArgs = ['--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
-               '--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED']
-}
-
 dependencies {
     compile "org.openjfx:javafx-base:14.0.1:linux"
     compile "org.openjfx:javafx-graphics:14.0.1:linux"
@@ -25,12 +20,8 @@ dependencies {
     compile "org.openjfx:javafx-controls:14.0.1:win"
     compile "org.openjfx:javafx-fxml:14.0.1:win"
     compile 'org.json:json:20190722'
-    compile 'com.auth0:java-jwt:3.10.3'
-    compile 'com.jfoenix:jfoenix:9.0.9'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
-
-mainClassName = 'io.fyko.droidconnect.Main'
 
 javafx {
     version = "14.0.1"
